# passwords

./: Jenkinsfile  README.md  passwords.py  pyproject.toml  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: publish.yml
Passwords.egg-info/: PKG-INFO  SOURCES.txt
passwords/: pyproject.toml
src/passwords_zwhelton/: __init__.py
