[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "passwords_zwhelton"
version = "0.1.0"
authors = [
  { name="ncstate-sat" },
]
description = "A package to retrieve passwords from the Passwordstate API"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
dependencies = [ "requests" ]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]