[build-system]
requires = ["flit_core>=3.2"]
build-backend = "flit_core.buildapi"

[project]
name = "passwordstate_client"
version = "0.0.1"
authors = [
  { name="Ryan Semmler", email="rsemmle@ncsu.edu" },
]
description = "A package to retrieve passwords from the Passwordstate API"
readme = "README.md"
requires-python = ">=3.6"
dependencies = [ "requests" ]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ncstate-sat/passwords"
